--- a/cinema/src/components/Header/Header.scss
+++ b/cinema/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-@import '../styles/vars.scss';
+@import '../../styles/vars.scss';
 
 header {
     position: fixed;
@@ -35,8 +35,11 @@ header {
     .navigation {
         width: 70%;
         &-list {
+            &.show {
+                display: flex;
+            }
             text-decoration: none;
-            display: flex;
+            display: none;
             align-items: center;
             justify-content: space-between;
             &__item {
@@ -69,42 +72,51 @@ header {
                 }
             }
         }
-    }
-
-   .hamburger {
-        display: block;
-        width: 60px;
-        height: 45px;
-        position: absolute;
-        right: 60px;
-        &.active {
-            .left {
-                top: 36px;
-                transform: rotate(135deg);
-            }
-            .center {
-                opacity: 0;
-            }
-            .right {
-                top: 36px;
-                transform: rotate(-135deg);
-            }
-        }
-        &__line {
-            width: 100%;
-            position: absolute;
-            height: 9px;
-            background-color: $white;
-            margin-bottom: 7px;
-            transition: 300ms ease-in-out;
-            &.center {
-                top: 18px;
-            }
-            &.right {
-                top: 36px;
-                
-            }
-        }
-    }
-   
+    } 
 }
+
+
+ @media only screen and (max-width: 768px) {
+    header {
+        width: 100%;
+        height: 100%;
+        .logo {
+            position: absolute;
+            top: 0;
+            width: 150px;
+            img {
+                width: 100%;
+            }
+        }
+        .navigation {
+            width: 100%;
+            &-list {
+                flex-direction: column;
+                &__item {
+                    margin-bottom: 30px;
+                    a {
+                        font-size: 36px;
+                    }
+                }
+            }
+        }
+        &.sticky {
+            .hamburger {
+                 &::before, &::after, &-container {
+                     background-color: $black;
+                 }
+            }
+        }
+        .hamburger {
+            position: absolute;
+            top: 40px;
+            right: 40px;
+        }
+    }
+ }
+
+  @media only screen and (min-width: 768px) {
+    .hamburger {
+        display: none;
+    }
+  }
