--- a/cinema/src/components/Header/Header.scss
+++ b/cinema/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
 
 header {
     position: fixed;
+    height: 150px;
     top: 0;
     width: 100%;
     box-sizing: border-box;
@@ -14,7 +15,6 @@ header {
     &.sticky {
         background-color: $white;
         color: $black;
-        
         .navigation {
             a {
                 color: $black;
