Redesigned header and schedule. Added new assets for icons.Created mobile design only.Added footer

--- a/cinema/src/styles/config/vars.scss
+++ b/cinema/src/styles/config/vars.scss
@@ -1,5 +1,7 @@
 $gradient-red: linear-gradient(123.23deg, #D83D3D -11.59%, rgba(0, 0, 0, 0) 69.79%);
 $white: #fff;
 $black: #000;
-$main-color: #393939;
+$pink:  #F6E6E6;
+$pink_text: #EBDBDB;
+$pink_dark: #B97676;
 
