--- a/cinema/src/components/Header/Header.scss
+++ b/cinema/src/components/Header/Header.scss
@@ -1,122 +1,92 @@
-@import '../../styles/vars.scss';
+@import '../../styles/config/config.scss';
 
-header {
-    position: fixed;
-    height: 150px;
-    top: 0;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: $main-color;
-    padding: 20px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: 300ms ease-in-out;
-    &.sticky {
-        background-color: $white;
-        color: $black;
-        .navigation {
-            a {
-                color: $black;
-                &::after {
-                    background-color: $black;
-                }
+@include respond-to(xsmallDevices) {
+    header {
+        z-index: 9999;
+        position: fixed;
+        top: 0;
+        box-sizing: border-box;
+        width: 100%;
+        padding: 0 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #fff;
+        .logo_naming {
+            margin-left: -5px;
+            @include montserrat;
+            font-size: 22px;
+            span {
+                @include poppins;
+                @include bold_font;
             }
         }
-    }
-    
-    .logo {
-        width: 150px;
-        img {
-            width: 100%;
-        }
-    }
 
-    .navigation {
-        width: 70%;
-        &-list {
-            &.show {
+        
+        .btn-toggle {
+            outline: none;
+            border: none;
+            display: block;
+            width: 40px;
+            height: 40px;
+            background: transparent;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .navigation {
+            margin-top: 0;
+             &.active {
                 display: flex;
             }
-            text-decoration: none;
+            height: calc(100% - 65px);
+            width: 100%;
             display: none;
+            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            justify-content: space-between;
+            position: fixed;
+            padding: 0;
+            top: 68px;
+            list-style: none;
+            transition: 0.3s ease-in-out;
+           background: #fff;
+           text-align: center;
+           left: 0;
             &__item {
-                list-style: none;
-                margin-left: 20px;
-                position: relative;
-                a {
-                    color: $white;
-                    text-decoration: none;
-                    font-size: 32px;
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        width: 0;
-                        height: 3px;
-                        background-color: $white;
-                        bottom: -15px;
-                        left: 0;
-                        transition: width 0.3s ease-in-out;
-                    }
-                    &:hover::after {
-                        width: 100%;
-                    }   
-                }
-                &.active {
+                width: 100%;
+                margin-bottom: 50px;
+                &.current {
                     a {
-                        color: red;
+                        @include semiBold_font;
+                        color: $pink_dark;
                     }
-                    
+                }
+                a {
+                    position: relative;
+                    @include poppins;
+                    @include light_font;
+                    font-size: 28px;
+                    &:after {
+                        content: '';
+                        display: block;
+                        width: 0%;
+                        height: 2px;
+                        background: #000;
+                        margin-top: 10px;
+                        transition: 0.3s ease-in-out;
+                    }
+                    &:hover {
+                        @include semiBold_font;
+                    }
+                    &:hover:after {
+                        width: 100%;
+                    }
                 }
             }
         }
-    } 
+    }
 }
 
-
- @media only screen and (max-width: 768px) {
-    header {
-        width: 100%;
-        height: 100%;
-        .logo {
-            position: absolute;
-            top: 0;
-            width: 150px;
-            img {
-                width: 100%;
-            }
-        }
-        .navigation {
-            width: 100%;
-            &-list {
-                flex-direction: column;
-                &__item {
-                    margin-bottom: 30px;
-                    a {
-                        font-size: 36px;
-                    }
-                }
-            }
-        }
-        &.sticky {
-            .hamburger {
-                 &::before, &::after, &-container {
-                     background-color: $black;
-                 }
-            }
-        }
-        .hamburger {
-            position: absolute;
-            top: 40px;
-            right: 40px;
-        }
-    }
- }
-
-  @media only screen and (min-width: 768px) {
-    .hamburger {
-        display: none;
-    }
-  }
