--- a/cinema/src/pages/Schedule.scss
+++ b/cinema/src/pages/Schedule.scss
@@ -1,71 +1,101 @@
+@import '../styles/config/config.scss';
+
 .schedule {
+    box-sizing:border-box;
+    padding: 15px;
     width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     &-setup {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 32px;
+        text-align: center;
+        h3 {
+            @include montserrat;
+            font-size: 20px;
+            @include semiBold_font;
+            margin-bottom: 10px;
+            color: $pink_dark;
+        }
         .calendar {
-            cursor: pointer;
+            font-size: 14px;
             display: flex;
             align-items: center;
-            img {
-                width: 32px;
-                height: 32px;
-            }
+            justify-content: center;
             span {
-                margin-left: 15px;
-                font-weight: 500;
+                margin-left: 5px;
             }
         }
     }
 
     &-container {
+        position: relative;
+        margin-top: 30px;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        width: 100%;
-        &-item {
-            margin-top: 50px;
-            display: flex;
-            .text-content {
-                flex: 2;
-                h5 {
-                    font-size: 28px;
-                    font-weight: 400;
-                    margin-top: 0;
-                    margin-bottom: 15px;
-                }
-                img {
-                    width: 100%;
-                    height: 400px;
-                    border-radius: 15px;
-                    object-fit: cover;
-                }    
+        align-items: center;
+        .arrow-back {
+            position: absolute;
+            bottom: 15px;
+            right: 5px;
+        }
+        &__item {
+           position: relative;
+           width: 75%;
+           height: 400px;
+           border-radius: 15px;
+           margin-top: 25px;
+           overflow: hidden;
+            img {
+                background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
+                width: 100%;
+                height: 100%;      
             }
-            .time {
-                flex: 4;
-                display: flex;
-                padding: 100px;
-                align-content: flex-end;
-                justify-content: space-around;
-                align-items: center;
-                flex-wrap: wrap;
-                &__item {
-                    max-height: 50px;
-                    box-sizing: border-box;
-                    padding: 15px 60px;
+
+            .hovered-content {
+                display: none;
+                &.active {
                     display: flex;
-                    align-items: center;
-                    background-color: #000;
+                }
+                top: 0;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                background: rgba(0, 0, 0, 0.7); 
+                .btn-tickets {
+                    padding: 15px 40px;
                     color: #fff;
+                    background: #AAA4A4;
+                    border-radius: 19.7884px;
+                    border: none;
                     font-size: 18px;
-                    border: 5px solid rgba(247, 8, 8, 0.2);;
-                    margin: 30px 20px;
-                    border-radius: 15px;
-                    &:hover {
-                         background: rgba(247, 8, 8, 0.2);;
+                }
+                .more-info {
+                    color: #fff;
+                    margin-top: 10px;
+                    font-size: 14px;
+                    cursor: pointer;
+                }
+                .hovered-times {
+                    position: absolute;
+                    bottom: 0;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    width: 100%;
+                    background: rgba(0, 0, 0, 0.2);
+                    .hovered-time {
+                        padding: 5px;
+                        font-size: 14px;
+                        color: white;
+                        border-radius: 19.7884px;
+                        border: none;
+                        margin-right: 10px;
                     }
                 }
             }
