--- a/cinema/src/styles/index.scss
+++ b/cinema/src/styles/index.scss
@@ -1,16 +1,38 @@
-@import './vars.scss';
+@import './config/config.scss';
 
 body {
+  background: $pink;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $main-color;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+main {
+  margin-top: 150px;
+   box-sizing: border-box;
+}
+
+body {
+  min-height: 1000px;
+  scroll-behavior: smooth;
+ 
+}
+
+@include respond-to(xsmallDevices) {
+  main {
+    margin-top: 66px;
+  }
 }
